static/css/landing/organizadores.css
/* Organizadores */
.card {
  width: 300px;
}

.card img {
  width: 300px !important;
  height: 260px;
}

.card > .card-image {
  overflow: hidden;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 250px;
}

.card .card-content{
  background-color: #fff;
  text-align: center;
}

.card .card-content > span {
  color: #031b4e;
}

.card .card-content > p {
  color: rgba(3,27,78,.7)
}

.header > .image-header {
  background-image: url("../../static_media/organizadores.jpg");
  background-position: top;
}

